SDKs/apicurio.local/registry/2.1.0-SNAPSHOT/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { CreateGlobalRuleRequest, CreateGlobalRuleResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateGlobalRuleRequest = {
  request: {
    config: "sit",
    type: "VALIDITY",
  },
};

sdk.admin.createGlobalRule(req).then((res: CreateGlobalRuleResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Admin

* `createGlobalRule` - Create global rule
* `createRoleMapping` - Create a new role mapping
* `deleteAllGlobalRules` - Delete all global rules
* `deleteGlobalRule` - Delete global rule
* `deleteRoleMapping` - Delete a role mapping
* `exportData` - Export registry data
* `getGlobalRuleConfig` - Get global rule configuration
* `getLogConfiguration` - Get a single logger configuration
* `getRoleMapping` - Return a single role mapping
* `importData` - Import registry data
* `listGlobalRules` - List global rules
* `listLogConfigurations` - List logging configurations
* `listRoleMappings` - List all role mappings
* `removeLogConfiguration` - Removes logger configuration
* `setLogConfiguration` - Set a logger's configuration
* `updateGlobalRuleConfig` - Update global rule configuration
* `updateRoleMapping` - Update a role mapping

### Artifact rules

* `createArtifactRule` - Create artifact rule
* `deleteArtifactRule` - Delete artifact rule
* `deleteArtifactRules` - Delete artifact rules
* `getArtifactRuleConfig` - Get artifact rule configuration
* `listArtifactRules` - List artifact rules
* `testUpdateArtifact` - Test update artifact
* `updateArtifactRuleConfig` - Update artifact rule configuration

### Artifacts

* `createArtifact` - Create artifact
* `deleteArtifact` - Delete artifact
* `deleteArtifactsInGroup` - Deletes all artifacts in a group
* `getContentByGlobalId` - Get artifact by global ID
* `getContentByHash` - Get artifact content by SHA-256 hash
* `getContentById` - Get artifact content by ID
* `getLatestArtifact` - Get latest artifact
* `listArtifactsInGroup` - List artifacts in group
* `searchArtifacts` - Search for artifacts
* `searchArtifactsByContent` - Search for artifacts by content
* `updateArtifact` - Update artifact
* `updateArtifactState` - Update artifact state

### Global rules

* `createGlobalRule` - Create global rule
* `deleteAllGlobalRules` - Delete all global rules
* `deleteGlobalRule` - Delete global rule
* `getGlobalRuleConfig` - Get global rule configuration
* `listGlobalRules` - List global rules
* `updateGlobalRuleConfig` - Update global rule configuration

### Metadata

* `deleteArtifactVersionMetaData` - Delete artifact version metadata
* `getArtifactMetaData` - Get artifact metadata
* `getArtifactVersionMetaData` - Get artifact version metadata
* `getArtifactVersionMetaDataByContent` - Get artifact version metadata by content
* `updateArtifactMetaData` - Update artifact metadata
* `updateArtifactVersionMetaData` - Update artifact version metadata

### Search

* `searchArtifacts` - Search for artifacts
* `searchArtifactsByContent` - Search for artifacts by content

### System

* `getSystemInfo` - Get system information

### Users

* `getCurrentUserInfo` - Get current user

### Versions

* `createArtifactVersion` - Create artifact version
* `getArtifactVersion` - Get artifact version
* `listArtifactVersions` - List artifact versions
* `updateArtifactVersionState` - Update artifact version state

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
